--- a/index.html
+++ b/index.html
@@ -93,12 +93,12 @@
   <script src="https://unpkg.com/mqtt/dist/mqtt.min.js"></script>
 
   <script>
-    const DEEPGRAM_KEY = "YOUR_DEEPGRAM_API_KEY";
+    const DEEPGRAM_KEY = "9b0ff54367ecc4f717993ea56ca1d3741d296f1e";
 
     // MQTT
     const client = mqtt.connect("wss://YOUR_HIVEMQ_URL:8884/mqtt", {
-      username: "YOUR_MQTT_USERNAME",
-      password: "YOUR_MQTT_PASSWORD"
+      username: "Rajitha",
+      password: "RajiL3He"
     });
 
     client.on("connect", () => {
@@ -151,3 +151,4 @@
 
 </body>
 </html>
+
