--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     const DEEPGRAM_KEY = "9b0ff54367ecc4f717993ea56ca1d3741d296f1e";
 
     // MQTT
-    const client = mqtt.connect("wss://YOUR_HIVEMQ_URL:8884/mqtt", {
+    const client = mqtt.connect("acdb2ae09853439ea935f8823d722d8d.s1.eu.hivemq.cloud:8884/mqtt", {
       username: "Rajitha",
       password: "RajiL3He"
     });
@@ -151,4 +151,5 @@
 
 </body>
 </html>
+
 
