--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <script>
   const DEEPGRAM_KEY = "9b0ff54367ecc4f717993ea56ca1d3741d296f1e";
 
-  const client = mqtt.connect("acdb2ae09853439ea935f8823d722d8d.s1.eu.hivemq.cloud:8884/mqtt", {
+  const client = mqtt.connect("wss://acdb2ae09853439ea935f8823d722d8d.s1.eu.hivemq.cloud:8884/mqtt", {
     username: "Rajitha",
     password: "RajiL3He"
   });
@@ -111,3 +111,4 @@
 
 </body>
 </html>
+
