--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
   <p id="status">Status: Idle</p>
 
 <script>
-  const DEEPGRAM_KEY = "keyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy";
+  const DEEPGRAM_KEY = "9b0ff54367ecc4f717993ea56ca1d3741d296f1e";
 
-  const client = mqtt.connect("mqtttttttttttttttttttttttttttttt", {
+  const client = mqtt.connect("acdb2ae09853439ea935f8823d722d8d.s1.eu.hivemq.cloud:8884/mqtt", {
     username: "Rajitha",
-    password: "passsssowrld"
+    password: "RajiL3He"
   });
 
   let mqttConnected = false;
@@ -111,5 +111,6 @@
 
 </body>
 </html>
+
 
 
